--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
-    "cSpell.words": [
-        "abstarct",
-        "bgcolor",
-        "codingmonks",
-        "haspopup",
-        "iconify",
-        "labelledby",
-        "persistor",
-        "simplebar",
-        "stylis"
-    ]
+  "cSpell.words": [
+    "abstarct",
+    "bgcolor",
+    "codingmonks",
+    "describedby",
+    "haspopup",
+    "iconify",
+    "labelledby",
+    "persistor",
+    "simplebar",
+    "stylis"
+  ]
 }
